[tool.poetry]
name = "itu-p1203"
version = "1.8.0"
description = "ITU-T P.1203 Standalone Model"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
gitchangelog = "^3.0.4"
pystache = "^0.5.4"
pytest = "^6.2.3"

[tool.poetry.scripts]
p1203-standalone = 'itu_p1203.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
