[tool.poetry]
name = "itu-p1203"
version = "1.9.6"
description = "ITU-T P.1203 Standalone Model"
authors = ["Werner Robitza <werner.robitza@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=2.0.0,<3.0.0"

[tool.poetry.dev-dependencies]
gitchangelog = "^3.0.4"
pystache = "^0.6.5"
pytest = "^6.2.5"

[tool.poetry.scripts]
p1203-standalone = 'itu_p1203.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
